syntax = "proto3";

service Dashboard {
  rpc Get (GetMessage) returns (Response) {}
}

message GetMessage {
  string target_cat = 1;
}

message Response {
  string name = 1;
  string kind = 2;
}
